[package]
name = "brickadia"
version = "0.1.0"
edition = "2018"
authors = ["voximity"]
description = "Save file reader/writer for Brickadia BRS saves"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.1.0"
byteorder = "1.4.3"
flate2 = "1.0.20"
lazy_static = "1.4.0"
num_enum = "0.5.1"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
uuid = "0.8"

[features]
serialize = ["serde", "uuid/serde"]
