[package]
name = "brickadia"
version = "0.1.18"
edition = "2018"
authors = ["voximity"]
description = "Save file reader/writer for Brickadia BRS saves"
license = "MIT"

[dependencies]
bitstream-io = "1.1.0"
byteorder = "1.4.3"
flate2 = "1.0.20"
lazy_static = "1.4.0"
num_enum = "0.5.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
thiserror = "1.0"
uuid = "0.8"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["util"]
serialize = ["serde", "serde_repr", "uuid/serde"]
util = []
